# my_cli

./: Cargo.toml  example.db
src/: main.rs
tests/: cli.rs
