[package]
name = "my_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
shellexpand = "3.1.0"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"